tests/invalid/import_call_non_function_module_attr/main.py
import provider

def run_case() -> None:
    x: int = provider.value()

if __name__ == "__main__":
    run_case()
